load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "flat_hash_map_test",
    size = "small",
    srcs = ["flat_hash_map_test.cc"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_googletest//:gtest_main",
    ],
)
